--- a/personal-site/wwwroot/css/app.css
+++ b/personal-site/wwwroot/css/app.css
@@ -3,11 +3,11 @@
     src: url("../font/Rubik/Rubik-VariableFont_wght.ttf")
 }
 
-@media (min-width: 768px) {
+/*@media (min-width: 768px) {
     html {
         font-size: 16px;
     }
-}
+}*/
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
@@ -62,6 +62,11 @@ footer {
     border: 0 !important;
     box-shadow: none !important;
 }
+
+.navbar-nav{
+    flex-direction: row !important;
+} 
+
 
 #about {
     margin-top: 10%;
