--- a/personal-site/Layout/MainLayout.razor
+++ b/personal-site/Layout/MainLayout.razor
@@ -1,27 +1,25 @@
 ﻿@inherits LayoutComponentBase
 
-<header>
+<header class="sticky-top bg-body">
     <NavMenu />
 </header>
 
 <div class="container">
-
     <main id="main" role="main" class="pb-3">
         @Body
     </main>
-
-    <footer class="footer text-muted bottom-0">
-        <div class="ps-2">
-            <div class="row">
-                <div class="col-sm-2"></div>
-                <div class="col-sm-8 text-center">&copy; Copyright @DateTime.Now.Year. All Rights Reserved - Designed by ZYT</div>
-                <div class="col-sm-2 text-center"><NavLink href="Privacy">Privacy </NavLink> | <NavLink href="Cookie"> Cookie</NavLink></div>
-            </div>
-        </div>
-    </footer>
 </div>
 
-
+<footer class="footer text-muted bg-body pb-1">
+    <div class="ps-2">
+        <div class="row">
+            <div class="text-center">&copy; Copyright @DateTime.Now.Year. All Rights Reserved - Designed by ZYT</div>
+        </div>
+        <div class="row">
+            <div class="text-center"><NavLink href="Privacy">Privacy </NavLink> | <NavLink href="Cookie"> Cookie</NavLink></div>
+        </div>
+    </div>
+</footer>
 
 <script>
 
