--- a/personal-site/wwwroot/css/app.css
+++ b/personal-site/wwwroot/css/app.css
@@ -113,9 +113,8 @@ svg {
     }
 
 .footer {
-    position: absolute;
-    left: 0;
+    position: fixed;
     width: 100%;
+    bottom: 0;
     text-align: center;
-    margin-bottom: 1%;
 }
