fix padding bottom

--- a/personal-site/Pages/Cookies.razor
+++ b/personal-site/Pages/Cookies.razor
@@ -4,8 +4,7 @@
 
 <h1>Cookie Policy</h1>
 
-<div>
-
+<div class="pb-3">
     <p>
         At <strong>ZYT Site</strong>, one of our main priorities is the privacy of our visitors. This Cookie Policy outlines the types of information that are collected and recorded by ZYT Site and how we use it.
     </p>
