--- a/personal-site/Pages/Privacy.razor
+++ b/personal-site/Pages/Privacy.razor
@@ -4,7 +4,7 @@
 
 <h1>Privacy Policy</h1>
 
-<div>
+<div class="pb-3">
     <p>
         At <strong>ZYT Site</strong>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by ZYT Site and how we use it.
     </p>
